# thesis-semi-structured-financial-instruments

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: README.md  analysis.ipynb  attachments_stats.sh  check_data.ipynb  collect_eis_guarantees.py  eda.ipynb  eda_wide_table.py  graphs.ipynb
data/eis/: __init__.py  config.py  downloader.py  parser.py  selenium_client.py  storage.py
data/samples/: document-info_11.html  document-info_196221.html  document-info_1962721.html  generalInformation_1.html  generalInformation_11.html  generalInformation_196221.html  generalInformation_1962721.html
data/samples/document-info_11_files/: customScrollbar.js  recordSupportSystem.js
data/samples/document-info_196221_files/: hints.js  openstreetmap.js
data/samples/document-info_1962721_files/: cardBaseLayout.js  cards_keyboard_control_script.js  checkNotice.js  jquery_msgBox.js  ui_autocomplete.js
data/samples/generalInformation_11_files/: action-switch.js  app.css  app.js  generalPagination.js  openStreetMapCommonFunctions.js  ssl-checker.js
data/samples/generalInformation_196221_files/: analytics.js  custom.js  keyboardNavigationRules.js  script.js
data/samples/generalInformation_1962721_files/: attachments-common-tab.js  generalChevron.js  jquery.price_format.1.7.js
